tests/negative/test_func_bad_name.orb
let i32 foo = 100;

fnc foo() {}

fnc main() {}